<resources>
    <string name="app_name">Cambrian Course Select App</string>

    <string name="student_number">Student Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="click_register">You don not  have account!! Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="program_of_study">Program Of Study</string>
    <string name="save">Save</string>

    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="dark_mode">Dark Mode</string>
</resources>