<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login.RegisterPage">

    <EditText
        android:id="@+id/full_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/program_of_study"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/program_of_study"/>

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"/>



</LinearLayout>