<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login.RegisterPage">


    <EditText
        android:id="@+id/student_number"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/student_number"/>
    <EditText
        android:id="@+id/login_password"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>



    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/click_register"/>

</LinearLayout>